# Watering-Controller

./: .gitignore  README.md  SM.txt  WateringController.ino
WaterController v2.0.0/: .gitignore.txt  Płytka.brd  Płytka.s#1  Płytka.s#2  Płytka.s#3  Płytka.s#4  Płytka.sch  eagle.epf
WaterController v2.0.0/DaemonRPi/: CMakeLists.txt  readme.md
WaterController v2.0.0/DaemonRPi/libs/: CMakeLists.txt
WaterController v2.0.0/DaemonRPi/libs/src/: Configuration.cpp  Configuration.h  Database.cpp  Database.h  ListenerWebsocket.cpp  ListenerWebsocket.h  Logger.cpp  Logger.h  Record.cpp  Record.h  WebsocketService.cpp  WebsocketService.h  websocketService.cpp  websocketService.h
WaterController v2.0.0/DaemonRPi/main-program/: CMakeLists.txt  main.cpp  rpi.db
WaterController v2.0.0/DaemonRPi/tests/: CMakeLists.txt  main-test.cpp
WaterController v2.0.0/WateringController/: platformio.ini
WaterController v2.0.0/WateringController/lib/FlowerProfile/: Flowerprofile.cpp  Flowerprofile.hpp
WaterController v2.0.0/WateringController/lib/PIDcontroller/: PIDcontroller.cpp  PIDcontroller.h
WaterController v2.0.0/WateringController/lib/sensorTemperatureHandler/: sensorTemperatureHandler.cpp  sensorTemperatureHandler.h
WaterController v2.0.0/WateringController/src/: main.cpp  workspace.code-workspace
